add rubik font and start adding header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/penrose.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dmitrii Antropov</title>
+    <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
   </head>
   <body>
     <div id="root"></div>
